[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Chad Brouze <chadbrouze1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
openai = "^1.34.0"
ipykernel = "^6.29.4"
python = "^3.12"
pandas = "^2.2.2"
datasets = "^2.19.2"
transformers = "^4.41.2"
torch = "^2.3.1"
accelerate = "^0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
